Fix report header jumping on hover on report page

--- a/client/pages/report.css
+++ b/client/pages/report.css
@@ -176,9 +176,24 @@
     top: 0;
     left: 0;
     width: 100%;
-    margin: -2px;
+    margin: -1px;
     padding: 0;
-    visibility: hidden;
+    opacity: .0001;
+    border: 1px solid #aaa;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
+}
+.page-report .report-header-text input:hover,
+.page-report .report-header-text input:focus {
+    opacity: 1;
+}
+.page-report .report-header-text input:focus {
+    border-color: #0af;
+    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
+    outline: 0;
+}
+.discovery[data-dzen] .page-report .report-header-text input {
+    display: none;
 }
 .page-report .report-header-text .timestamp {
     display: block;
@@ -237,10 +252,6 @@
 }
 .discovery[data-dzen] .page-report .data-query-view-options .toggle-fullscreen {
     background-image: url(./report-cancel-fullscreen.svg);
-}
-.discovery:not([data-dzen]) .page-report .report-header-text input:focus,
-.discovery:not([data-dzen]) .page-report .report-header-text:hover input {
-    visibility: visible;
 }
 .page-report .editor-toolbar-view-dict {
     padding-left: 10px;
